--- a/crates/api/Cargo.toml
+++ b/crates/api/Cargo.toml
@@ -6,3 +6,4 @@ rust-version = "1.92.0"
 
 [dependencies]
 serde = { version = "1.0", default-features = false, features = ["std", "derive"] }
+serde_json = { version = "1.0", default-features = false, features = ["std"] }
