--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,5 +1,4 @@
 [toolchain]
-channel = "nightly-2026-02-01"
+channel = "stable"
 components = ["clippy", "rustfmt"]
-targets = []
 profile = "minimal"
